- layout fixes for IE, preventing user decision content overlapping on the right and massive unnecessary empty vertical space on profile edit page

--- a/packages/reaction-p2p-marketplace-profile/client/templates/accountProfile/marketplaceAccountProfile.less
+++ b/packages/reaction-p2p-marketplace-profile/client/templates/accountProfile/marketplaceAccountProfile.less
@@ -15,3 +15,11 @@
 select[name="country"] option:first-child {
   visibility: hidden; /* can't translate (Select One) so we hide it */
 }
+
+/* fixes for IE */
+.profile-edit-page .flex .flex-item {
+  heigth: 100%;
+}
+.profile-edit-page .flex-item .panel .panel-content {
+  heigth: 100%;
+}
