--- a/packages/reaction-p2p-marketplace-seller/client/templates/userDecision/userDecision.less
+++ b/packages/reaction-p2p-marketplace-seller/client/templates/userDecision/userDecision.less
@@ -31,3 +31,8 @@ img.decision-deco {
   height: auto;
   width:100%;
 }
+
+/* fix for IE */
+.user-decision-page .flex-item .panel {
+  width: 100%;
+}
